# idx-telegram-bot

./: .env  main.py  pyproject.toml  telegrambot.py  tradingview.py
